<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="112dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_assignment_ind_24"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_to_register_form"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"></TextView>


    <EditText
        android:id="@+id/firstName_edtText"
        android:hint="@string/enter_first_name"
        style="@style/EditTextStyle"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lastName_edtText"
        android:hint="@string/enter_last_name"
        style="@style/EditTextStyle"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/gender" />

        <RadioButton
            android:id="@+id/male_rdBtn"
            style="@style/RadioButtonStyle"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female_rdBtn"
            style="@style/RadioButtonStyle"
            android:text="@string/female" />
    </LinearLayout>

    <TextView
        android:text="@string/date_of_birth"
        style="@style/TextViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/daySpinner"
            style="@style/SpinnerStyle"
            android:layout_width="90dp"
            android:layout_marginLeft="35dp"/>

        <Spinner
            android:id="@+id/monthSpinner"
            style="@style/SpinnerStyle"
            android:layout_width="120dp"/>

        <Spinner
        android:id="@+id/yearSpinner"
        style="@style/SpinnerStyle"
        android:layout_width="130dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000000"
        android:onClick="submitButtonOnAction"
        android:text="@string/submit"
        android:textSize="22sp" />

</LinearLayout>